@@ -219,3 +219,4 @@ Contributors:
   *  Urukalo Milan (Serbian translation)
   *  Guy Aroshas (Hebrew translation)
   *  Ivaylo Donchev (Bulgarian translation)
+  *  Tomas Spal (better ContactList title update routine)
